--- a/LletraMovil.iOS/LletraMovil.iOS.csproj
+++ b/LletraMovil.iOS/LletraMovil.iOS.csproj
@@ -151,6 +151,15 @@
     <BundleResource Include="Resources\user.png" />
   </ItemGroup>
   <ItemGroup>
+    <BundleResource Include="Resources\envelope.png" />
+  </ItemGroup>
+  <ItemGroup>
     <BundleResource Include="Resources\password.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\padlock.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\phone.png" />
   </ItemGroup>
 </Project>
