--- a/LletraMovil/LletraMovil.csproj
+++ b/LletraMovil/LletraMovil.csproj
@@ -15,7 +15,10 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Update="Views\RegisterPage.xaml">
+    <Folder Include="Views\Operators\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Views\Customers\RegisterPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
