--- a/LletraMovil.iOS/LletraMovil.iOS.csproj
+++ b/LletraMovil.iOS/LletraMovil.iOS.csproj
@@ -120,11 +120,17 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CardsView">
+      <Version>2.2.0</Version>
+    </PackageReference>
     <PackageReference Include="LeoJHarris.XForms.Plugin.EnhancedEntry">
       <Version>1.0.6</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.1.0.555618" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
+    <PackageReference Include="PanCardView">
+      <Version>1.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.3.0" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
@@ -161,5 +167,20 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\phone.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\id_card.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\little_home.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\credit_card.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\id.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\passport.png" />
   </ItemGroup>
 </Project>
