--- a/LletraMovil.Android/LletraMovil.Android.csproj
+++ b/LletraMovil.Android/LletraMovil.Android.csproj
@@ -21,6 +21,11 @@
     <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <AndroidKeyStore>true</AndroidKeyStore>
+    <AndroidSigningKeyStore>C:\Users\gaare\AppData\Local\Xamarin\Mono for Android\Keystore\Sysware\Sysware.keystore</AndroidSigningKeyStore>
+    <AndroidSigningStorePass>Sysware2016</AndroidSigningStorePass>
+    <AndroidSigningKeyAlias>Sysware</AndroidSigningKeyAlias>
+    <AndroidSigningKeyPass>Sysware2016</AndroidSigningKeyPass>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,6 +46,7 @@
     <WarningLevel>4</WarningLevel>
     <AndroidManagedSymbols>true</AndroidManagedSymbols>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
+    <MandroidI18n />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
